Istio-Deployments/gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: stage-org1-gateway
    namespace: stage-org1
spec:
    selector:
        istio: ingressgateway
    servers:
        - port:
            number: 80
            name: http
            protocol: HTTP
          hosts:
              - "*"
