Istio-Deployments/Istio-ingress-configuration.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: event-listener-gateway
  namespace: tekton-pipelines
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
      - "*"
  - port:
      number: 80
      name: http
      protocol: http
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: event-listener-vservice
  namespace: tekton-pipelines
spec:
  hosts:
  - "*"
  gateways:
  - event-listener-gateway
  http:
  - match:
    - uri:
        prefix: /cd-pipeline
    route:
    - destination:
        port:
          number: 8080
        host: el-cd-pipeline-listener
  - match:
    - uri:
        prefix: /ci-pipeline
    route:
    - destination:
        port:
          number: 8080
        host: el-ci-pipeline-listener
  - match:
    - uri:
        prefix: /cd-release-pipeline
    route:
    - destination:
        port:
          number: 8080
        host: el-cd-pipeline-listener-release
  - match:
    - uri:
        prefix: /new-branch
    route:
    - destination:
        port:
          number: 8080
        host: el-new-branch-listener
